@@ -1,5 +1,10 @@
 2009-02-11  Bastien Nocera  <hadess@hadess.net>
 
+	* src/plugins/screensaver/totem-screensaver.c (impl_activate),
+	(impl_deactivate): Fix warning on exit
+
+2009-02-11  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plugins/opensubtitles/opensubtitles.py: Add 50-odd
 	languages supported by Opensubtitles (Closes: #571132)
 
